# LearningWithAi

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
learning_mem/: chroma.sqlite3
src/: app.py  memory_service.py
src/config/: database.py
src/models/: documents.py  user.py
src/routes/: chat.py  learning_chat.py  library.py  user.py
